--- a/ManagePrivateDns.csproj
+++ b/ManagePrivateDns.csproj
@@ -8,6 +8,9 @@
 
   <ItemGroup>
 	<PackageReference Include="Azure.Identity" Version="1.9.0" />
+	<PackageReference Include="Azure.ResourceManager.PrivateDns" Version="1.0.1" />
 	<PackageReference Include="Azure.ResourceManager.Resources" Version="1.6.0" />
+	<PackageReference Include="Azure.ResourceManager.Compute" Version="1.1.0" />
+	<PackageReference Include="Azure.ResourceManager.Network" Version="1.4.0" />
   </ItemGroup>
 </Project>
